--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "build": "npm run write:env -s && ng build --prod",
     "start": "npm run write:env -s && ng serve --proxy-config proxy.conf.js",
+    "serve": "npm run ng serve -o",
     "serve:sw": "npm run build -s && npx http-server ./www -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
     "test": "npm run write:env -s && ng test",
@@ -65,6 +66,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "material-icons": "^0.5.5",
     "moment": "^2.29.1",
+    "ngx-mat-select-search": "^3.3.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.10.3",
